// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots filters|f-m-time Period (from dates) 1`] = `
<div>
  <div>
    undefined period: 
  </div>
   
  <div>
    empty period: 
  </div>
   
  <div>
    from only: mock-intl-dateTimeFormat-Sun Jun 23 2019 11:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    to only: mock-intl-dateTimeFormat-Sun Jun 23 2019 11:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    full period: mock-intl-dateTimeFormat-Sun Jun 23 2019 11:59:00 GMT-0400 (Eastern Daylight Time) à mock-intl-dateTimeFormat-Sun Jun 23 2019 14:15:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    full period, same time: mock-intl-dateTimeFormat-Sun Jun 23 2019 11:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
</div>
`;

exports[`Storyshots filters|f-m-time Period (from strings) 1`] = `
<div>
  <div>
    undefined period: 
  </div>
   
  <div>
    empty period: 
  </div>
   
  <div>
    from only: mock-intl-dateTimeFormat-Wed Jun 26 2019 11:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    to only: mock-intl-dateTimeFormat-Wed Jun 26 2019 11:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    full period: mock-intl-dateTimeFormat-Wed Jun 26 2019 11:59:00 GMT-0400 (Eastern Daylight Time) à mock-intl-dateTimeFormat-Wed Jun 26 2019 14:15:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    full period, same time: mock-intl-dateTimeFormat-Wed Jun 26 2019 11:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
</div>
`;

exports[`Storyshots filters|f-m-time Simple (from Dates) 1`] = `
<div>
  <div>
    at the top of the hour (AM): mock-intl-dateTimeFormat-Sun Jun 23 2019 11:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    hour with minutes (AM): mock-intl-dateTimeFormat-Sun Jun 23 2019 11:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    at the top of the hour (PM): mock-intl-dateTimeFormat-Sun Jun 23 2019 14:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    hour with minutes (PM): mock-intl-dateTimeFormat-Sun Jun 23 2019 14:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    at the top of the hour (Midnight): mock-intl-dateTimeFormat-Sun Jun 23 2019 00:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    hour with minutes (Midnight): mock-intl-dateTimeFormat-Sun Jun 23 2019 00:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
</div>
`;

exports[`Storyshots filters|f-m-time Simple (from strings) 1`] = `
<div>
  <div>
    at the top of the hour (AM): mock-intl-dateTimeFormat-Wed Jun 26 2019 11:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    hour with minutes (AM): mock-intl-dateTimeFormat-Wed Jun 26 2019 11:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    at the top of the hour (PM): mock-intl-dateTimeFormat-Wed Jun 26 2019 14:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    hour with minutes (PM): mock-intl-dateTimeFormat-Wed Jun 26 2019 14:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    at the top of the hour (Midnight): mock-intl-dateTimeFormat-Wed Jun 26 2019 00:00:00 GMT-0400 (Eastern Daylight Time)
  </div>
   
  <div>
    hour with minutes (Midnight): mock-intl-dateTimeFormat-Wed Jun 26 2019 00:59:00 GMT-0400 (Eastern Daylight Time)
  </div>
</div>
`;
